--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -21,22 +21,44 @@
         {% include blocks/app-header.html %}
       </header>
 
-      <div class="app__document app__document--story">
+      <div class="item item--story">
         <div class="sticky__header__wrapper">
-          <div class="document__visual-identifier">
+          <div class="item-type">
             <span>Project</span>
           </div>
-          <header class="document__header">
-            <h2>Open UX improvments <span class="id">3452</span></h2>
+          <header class="item-header">
+            <h2 class="item-header__title">Open UX improvments <span class="item-header__id">3452</span></h2>
 
-            <div class="actions">
-              <i class="process process--toggle">ण</i>
-              <i class="media media--toggle">स</i>
-            </div>
+            <div class="item-header__actions">
 
-            <div class="status">
-              <span>On schedule</span>
+              <div class="pmx-selector pmx-selector--collapsed">
+                <div class="pmx-selector__item pmx-selector__item--selected">
+                  <div class="pmx-selector__block ">
+                    <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Ongoing</span>
+                  </div>
+                </div>
+              </div>
+
+              <div class="pmx-selector pmx-selector--expanded pmx-selector--toggleSelect">
+                <div class="pmx-selector__item">
+                  <div class="pmx-selector__block">
+                    <span class="pmx-selector__blockPart pmx-selector__blockPart--field">स</span>
+                  </div>
+                </div>
+                <div class="pmx-selector__item">
+                  <div class="pmx-selector__block">
+                    <span class="pmx-selector__blockPart pmx-selector__blockPart--field">द</span>
+                  </div>
+                </div>
+                <div class="pmx-selector__item pmx-selector__item--selected">
+                  <div class="pmx-selector__block">
+                    <span class="pmx-selector__blockPart pmx-selector__blockPart--field">ढ़</span>
+                  </div>
+                </div>
+              </div>
+
             </div>
+            
           </header>
         </div>
 
