--- a/sass/app.scss
+++ b/sass/app.scss
@@ -91,125 +91,6 @@ body.page-Popups .multiSelector {
 
 
 
-.app__document {
-  position: relative;
-  margin: 0 0 0 20px;
-  background-color: #F2F2F2;
-  box-shadow: 0 0 100px rgba(0,0,0,.2);
-
-  min-height: 500px;
-}
-
-.app__document .document__visual-identifier {
-  position: absolute;
-  width: 100%;
-  z-index: 1;
-}
-.app__document--meeting .document__visual-identifier {
-  border-top: 2px dashed #2C5386;
-}
-.app__document--meeting .document__visual-identifier span {
-  position: relative;
-  display: inline-block;
-  background-color: #bf920b;
-  color: #FFF;
-  text-transform: uppercase;
-  font-size: 10px;
-  font-weight: 700;
-  padding: 1px 5px 1px 15px;
-  margin: 10px 0 0;
-}
-.app__document--meeting .document__visual-identifier span:after {
-  content: '';
-  position: absolute;
-  top: 0;
-  right: -6px;
-  border-top: 7px solid #bf920b;
-  border-right: 6px solid transparent;
-  border-bottom: 8px solid #bf920b;
-}
-.app__document--bug .document__visual-identifier span {
-  position: relative;
-  display: inline-block;
-  background-color: #bf920b;
-  color: #FFF;
-  text-transform: uppercase;
-  font-size: 10px;
-  font-weight: 700;
-  padding: 1px 10px 1px 15px;
-  border-radius: 0 10px 10px 0;
-}
-.app__document--bug .document__header {
-  border-bottom: 2px dashed #2C5386;
-}
-.app__document--bug .document__header:before {
-    content: '';
-    position: absolute;
-    bottom: -6px;
-    left: -5px;
-    width: 10px;
-    height: 10px;
-    border-radius: 100%;
-    background-color: #2C5386;
-}
-.app__document--bug .document__header:after {
-    content: '';
-    position: absolute;
-    bottom: -6px;
-    right: -5px;
-    width: 10px;
-    height: 10px;
-    border-radius: 100%;
-    background-color: #2c2c2c;
-}
-.app__document--story .document__visual-identifier span {
-    position: relative;
-    display: inline-block;
-    background-color: #11cfff;
-    color: #FFF;
-    text-transform: uppercase;
-    font-size: 10px;
-    font-weight: 600;
-    padding: 12px 5px 3px 7px;
-    margin: 0 0 0 10px;
-    letter-spacing: 1px;
-}
-.app__document--story .document__visual-identifier span:before {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 100%;
-  border-left: 5px solid #f2f2f2;
-  border-bottom: 26px solid transparent;
-  box-shadow: 2px 0 0 0 #11cfff;
-}
-.app__document--story .document__visual-identifier span:after {
-  content: '';
-  position: absolute;
-  top: 0;
-  right: -5px;
-  height: 100%;
-  border-left: 5px solid #11cfff;
-  border-bottom: 26px solid transparent;
-  box-shadow: -2px 0 0 0 #11cfff;
-}
-.app__document--story .document__header {
-  background: repeating-linear-gradient( -65deg, #f2f2f2, #f2f2f2 10px, #fff 10px, #fff 20px );
-  border-bottom: 0;
-}
-.app__document--story .document__header:before {
-  content: '';
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  background: linear-gradient(to bottom, rgba(255,255,255,0) 0%,rgba(242,242,242,1) 100%);
-}
-
-
-
 
 
 
@@ -232,72 +113,13 @@ body.page-Popups .multiSelector {
 
 
 
-.document__header {
-  position: relative;
-  padding: 26px 10px 10px 10px;
-  border-bottom: 2px solid #F2F2F2;
-}
-.document__header h2 {
-  position: relative;
-  display: inline-block;
-  font-weight: 400;
-  font-size: 24px;
-  color: #000;
-}
-.document__header h2 .id {
-    position: relative;
-    display: inline-block;
-    font-size: 10px;
-    border-radius: 15px;
-    top: -12px;
-    left: 1px;
-    font-weight: 400;
-    letter-spacing: 1px;
-    line-height: 1;
-}
-.document__header .status {
-    display: inline-block;
-    float: right;
-    border: 2px solid green;
-    color: green;
-    text-transform: uppercase;
-    font-weight: 600;
-    padding: 2px 12px;
-    margin: 0 10px;
-    border-radius: 15px;
-    letter-spacing: 1px;
-    position: relative;
-    line-height: 14px;
-    font-size: 14px;
-}
-.document__header .actions {
-  display: inline-block;
-  float: right;
-}
-.document__header .actions i {
-  position: relative;
-  font-size: 18px;
-  margin: 5px 12px;
-  color: #969696;
-  cursor: pointer;
-  transition: all .3s ease-in-out;
-}
-.document__header .actions i:hover {
-    color: #bf920b;
-}
-.document__header .actions .process--toggle {
-    color: #bf920b;
-}
-.document__info--visible .document__header .actions .process--toggle {
-    color: #969696;
-}
-.document__comments--visible .document__header .actions .media--toggle {
-    color: #bf920b;
-}
-.document__info--visible .document__header .actions .process--toggle:hover,
-.document__comments--visible .document__header .actions .media--toggle:hover {
-    color: #bf920b;
-}
+
+
+
+
+
+
+
 .document__content {
     position: relative;
     display: inline-block;
@@ -314,6 +136,9 @@ body.page-Popups .multiSelector {
   width: 25%;
   transition: all .3s ease-in-out;
 
+}
+.document__comments--visible .panel__center {
+  width: 50%;
 }
 .panel__center {
   float: left;
