--- a/sass/shared.scss
+++ b/sass/shared.scss
@@ -12,7 +12,10 @@
 @import "blocks/app-navigator.css";
 @import "blocks/user-menu.css";
 @import "blocks/app-header.css";
+
+@import "blocks/item-header.css";
 @import "blocks/item-comments.css";
+
 @import "blocks/applicable-slider.css";
 
 // Components
