--- a/sass/blocks/item-header.scss
+++ b/sass/blocks/item-header.scss
@@ -15,7 +15,7 @@
 
   &-header {
     position: relative;
-    padding: 26px 10px 10px 10px;
+    padding: 30px 15px 15px;
     border-bottom: 2px solid #F2F2F2;
 
     &__title {
@@ -29,13 +29,14 @@
     &__id {
       position: relative;
       display: inline-block;
-      font-size: 10px;
+      font-size: 12px;
       border-radius: 15px;
       top: -12px;
       left: 1px;
-      font-weight: 400;
       letter-spacing: 1px;
       line-height: 1;
+      font-weight: 600;
+      padding: 0 2px;
     }
 
     &__actions {
@@ -61,7 +62,7 @@
         font-size: 10px;
         font-weight: 700;
         padding: 1px 5px 1px 15px;
-        margin: 10px 0 0;
+        margin: 8px 0 0;
 
         &::after {
           content: '';
@@ -88,6 +89,7 @@
         font-weight: 700;
         padding: 1px 10px 1px 15px;
         border-radius: 0 10px 10px 0;
+        margin: 8px 0 0 0;
       }
     }
 
