insert JS scripts on item-detail

--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -38,7 +38,7 @@
 
 {% endif %}
 
-{% if page.title == 'Old App' %}
+{% if page.title == 'Old App' or page.title == 'Item detail' %}
   <!-- expand-collapse -->
   <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/init-expand-collapse.js"></script>
   <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/expand-collapse.js"></script>
