--- a/sass/blocks/item-header.scss
+++ b/sass/blocks/item-header.scss
@@ -96,26 +96,23 @@
     .item-header {
       border-bottom: 2px dashed #2C5386;
 
-      &::before {
+      &::before,
+      &::after {
         content: '';
         position: absolute;
         bottom: -6px;
-        left: -5px;
         width: 10px;
         height: 10px;
         border-radius: 100%;
         background-color: #2C5386;
       }
 
+      &::before {
+        left: -5px;
+      }
+
       &::after {
-        content: '';
-        position: absolute;
-        bottom: -6px;
         right: -5px;
-        width: 10px;
-        height: 10px;
-        border-radius: 100%;
-        background-color: #2c2c2c;
       }
     }
   }
