--- a/_includes/blocks/old-pmx-item-detail.html
+++ b/_includes/blocks/old-pmx-item-detail.html
@@ -1,40 +1,5 @@
 <div class="item item--bug">
-  <div class="item-type">
-    <span>Bug</span>
-  </div>
-
-  <header class="item-header">
-    <h2 class="item-header__title">PMX - Fix horizontal scroll alterneting in FireFox <span class="item-header__id">391441</span></h2>
-    <div class="item-header__actions">
-
-      <div class="pmx-selector pmx-selector--collapsed">
-        <div class="pmx-selector__item pmx-selector__item--selected">
-          <div class="pmx-selector__block ">
-            <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Ongoing</span>
-          </div>
-        </div>
-      </div>
-
-      <div class="pmx-selector pmx-selector--expanded pmx-selector--toggleSelect">
-        <div class="pmx-selector__item">
-          <div class="pmx-selector__block">
-            <span class="pmx-selector__blockPart pmx-selector__blockPart--field">स</span>
-          </div>
-        </div>
-        <div class="pmx-selector__item">
-          <div class="pmx-selector__block">
-            <span class="pmx-selector__blockPart pmx-selector__blockPart--field">द</span>
-          </div>
-        </div>
-        <div class="pmx-selector__item pmx-selector__item--selected">
-          <div class="pmx-selector__block">
-            <span class="pmx-selector__blockPart pmx-selector__blockPart--field">ढ़</span>
-          </div>
-        </div>
-      </div>
-
-    </div>
-  </header>
+  {% include blocks/item-header.html %}
 </div>
 
 <div id="ctl00_pagebody_container" class="pagebody-container">
