--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -23,43 +23,8 @@
 
       <div class="item item--story">
         <div class="sticky__header__wrapper">
-          <div class="item-type">
-            <span>Project</span>
-          </div>
-          <header class="item-header">
-            <h2 class="item-header__title">Open UX improvments <span class="item-header__id">3452</span></h2>
 
-            <div class="item-header__actions">
-
-              <div class="pmx-selector pmx-selector--collapsed">
-                <div class="pmx-selector__item pmx-selector__item--selected">
-                  <div class="pmx-selector__block ">
-                    <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Ongoing</span>
-                  </div>
-                </div>
-              </div>
-
-              <div class="pmx-selector pmx-selector--expanded pmx-selector--toggleSelect">
-                <div class="pmx-selector__item">
-                  <div class="pmx-selector__block">
-                    <span class="pmx-selector__blockPart pmx-selector__blockPart--field">स</span>
-                  </div>
-                </div>
-                <div class="pmx-selector__item">
-                  <div class="pmx-selector__block">
-                    <span class="pmx-selector__blockPart pmx-selector__blockPart--field">द</span>
-                  </div>
-                </div>
-                <div class="pmx-selector__item pmx-selector__item--selected">
-                  <div class="pmx-selector__block">
-                    <span class="pmx-selector__blockPart pmx-selector__blockPart--field">ढ़</span>
-                  </div>
-                </div>
-              </div>
-
-            </div>
-            
-          </header>
+          {% include blocks/item-header.html %}
         </div>
 
         <div class="document__content">
