--- a/_includes/blocks/itembox.html
+++ b/_includes/blocks/itembox.html
@@ -37,13 +37,13 @@
               </div>
             </li>
             <li class="itemBoxTable__headCell" style="flex-grow: 1;" data-flex="1">
-              <div class="itemBoxTable__headCellInner">This Head 1</div>
+              <div class="itemBoxTable__headCellInner">Title</div>
             </li>
             <li class="itemBoxTable__headCell" style="flex-grow: 1;" data-flex="1">
-              <div class="itemBoxTable__headCellInner">This Head 2 lorem ipsum dolor sit amet</div>
+              <div class="itemBoxTable__headCellInner">Performed For</div>
             </li>
             <li class="itemBoxTable__headCell" style="flex-grow: 3;" data-flex="3">
-              <div class="itemBoxTable__headCellInner">Date</div>
+              <div class="itemBoxTable__headCellInner">Assigned to</div>
             </li>
         </ul>
       </div>
@@ -137,13 +137,13 @@
                     </div>
                   </li>
                   <li class="itemBoxTable__headCell" style="flex-grow: 1;" data-flex="1">
-                    <div class="itemBoxTable__headCellInner">Child 1 Head 1</div>
+                    <div class="itemBoxTable__headCellInner">Title</div>
                   </li>
                   <li class="itemBoxTable__headCell" style="flex-grow: 1;" data-flex="1">
-                    <div class="itemBoxTable__headCellInner">Child 1 Head 2 lorem ipsum dolor sit amet</div>
+                    <div class="itemBoxTable__headCellInner">Performed For</div>
                   </li>
                   <li class="itemBoxTable__headCell" style="flex-grow: 3;" data-flex="3">
-                    <div class="itemBoxTable__headCellInner">Child 1 Head 3</div>
+                    <div class="itemBoxTable__headCellInner">Assigned to</div>
                   </li>
               </ul>
             </div>
