--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -39,6 +39,9 @@
 {% endif %}
 
 {% if page.title == 'Old App' or page.title == 'Item detail' %}
+  <!-- Sticky scroll -->
+  <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/scroll.js"></script>
+
   <!-- expand-collapse -->
   <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/init-expand-collapse.js"></script>
   <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/expand-collapse.js"></script>
