--- a/sass/shared.scss
+++ b/sass/shared.scss
@@ -8,6 +8,9 @@
 
 @import "app.css";
 
+// Plugins
+@import "plugins/sticky.css";
+
 // Blocks
 @import "blocks/app-navigator.css";
 @import "blocks/user-menu.css";
