--- a/sass/app.scss
+++ b/sass/app.scss
@@ -2,8 +2,15 @@
 ---
 
 body {
+  /*
   font-family: 'Source Sans Pro', sans-serif;
   font-family: 'tenforce', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "tenforce", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  */
+  font-family: -apple-system, BlinkMacSystemFont,
+                "tenforce", Helvetica, Arial, sans-serif,
+                "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-size: 14px;
 
   overflow-x: hidden;
   background-color: #2C5386;
@@ -96,17 +103,6 @@ body.page-Popups .multiSelector {
 
 
 
-.sticky-wrapper {
-  height: 67px;
-}
-.sticky__header__wrapper {
-  width: 100%;
-  border-bottom: #CCC dashed 1px;
-}
-
-.is-sticky .sticky__header__wrapper {
-  border-bottom: #CCC solid 1px;
-}
 
 
 
@@ -189,13 +185,8 @@ body.page-Popups .multiSelector {
     font-size: 12px;
 }
 
-.document__data .is-sticky-docheader .header  {
-  border-bottom: #CCC solid 1px;
-}
 
-.is-sticky-docheader .line {
-  display: none;
-}
+
 
 .document__data .header h3 {
     position: relative;
