js_ to JS_ everywhere otherwise it's not consistent

--- a/_includes/blocks/colorSelector-children.html
+++ b/_includes/blocks/colorSelector-children.html
@@ -1,9 +1,9 @@
-<div class="itemBox itemBox--children itemBox--tagPicker js_itemBox--colors">
+<div class="itemBox itemBox--children itemBox--tagPicker JS_itemBox--colors">
   <div class="itemBoxTable">
     <div class="itemBoxBody">
       <ul class="itemBoxTable__bodyRow">
         <li class="itemBoxTable__bodyCell" style="flex-grow: 0;" data-flex="0">
-          <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--color">
+          <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--color">
             <i class="itemBoxTable__action itemBoxTable__action--toggle" style="color: #dcdcdc;" data-color="#dcdcdc">ग़</i>
           </div>
         </li>
@@ -15,7 +15,7 @@
       </ul>
       <ul class="itemBoxTable__bodyRow">
         <li class="itemBoxTable__bodyCell" style="flex-grow: 0;" data-flex="0">
-          <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--color">
+          <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--color">
             <i class="itemBoxTable__action itemBoxTable__action--toggle" style="color: #00bfff;" data-color="#00bfff">ग़</i>
           </div>
         </li>
@@ -27,7 +27,7 @@
       </ul>
       <ul class="itemBoxTable__bodyRow">
         <li class="itemBoxTable__bodyCell" style="flex-grow: 0;" data-flex="0">
-          <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--color">
+          <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--color">
             <i class="itemBoxTable__action itemBoxTable__action--toggle" style="color: #0bda51;" data-color="#0bda51">ग़</i>
           </div>
         </li>
@@ -39,7 +39,7 @@
       </ul>
       <ul class="itemBoxTable__bodyRow">
         <li class="itemBoxTable__bodyCell" style="flex-grow: 0;" data-flex="0">
-          <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--color">
+          <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--color">
             <i class="itemBoxTable__action itemBoxTable__action--toggle" style="color: #f4ca16;" data-color="#f4ca16">ग़</i>
           </div>
         </li>
@@ -51,7 +51,7 @@
       </ul>
       <ul class="itemBoxTable__bodyRow">
         <li class="itemBoxTable__bodyCell" style="flex-grow: 0;" data-flex="0">
-          <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--color">
+          <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--color">
             <i class="itemBoxTable__action itemBoxTable__action--toggle" style="color: #b8860b;" data-color="#b8860b">ग़</i>
           </div>
         </li>
@@ -63,7 +63,7 @@
       </ul>
       <ul class="itemBoxTable__bodyRow">
         <li class="itemBoxTable__bodyCell" style="flex-grow: 0;" data-flex="0">
-          <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--color">
+          <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--color">
             <i class="itemBoxTable__action itemBoxTable__action--toggle" style="color: #e30022;" data-color="#e30022">ग़</i>
           </div>
         </li>
@@ -75,7 +75,7 @@
       </ul>
       <ul class="itemBoxTable__bodyRow">
         <li class="itemBoxTable__bodyCell" style="flex-grow: 0;" data-flex="0">
-          <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--color">
+          <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--color">
             <i class="itemBoxTable__action itemBoxTable__action--toggle" style="color: #343434;" data-color="#343434">ग़</i>
           </div>
         </li>
