--- a/_includes/javascript/newSelectedItem.html
+++ b/_includes/javascript/newSelectedItem.html
@@ -1,7 +1,7 @@
-<ul class="itemBoxTable__bodyRow js_filterableCell">
+<ul class="itemBoxTable__bodyRow JS_filterableCell">
     ${colorHTML}
   <li class="itemBoxTable__bodyCell" style="flex-grow: 1;">
-    <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--text ${excludeClass}">${textOfActionItem}</div>
+    <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--text ${excludeClass}">${textOfActionItem}</div>
   </li>
   <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--draggable" style="flex-grow: 0;" data-flex="0">
     <div class="itemBoxTable__bodyCellInner">
