--- a/_includes/popups/colorPicker-children.html
+++ b/_includes/popups/colorPicker-children.html
@@ -11,7 +11,7 @@
     <div class="itemBox">
       <div class="itemBoxTable">
         <div class="itemBoxBody">
-          <ul class="itemBoxTable__bodyRow js_multiSelector__box--selectionTitle">
+          <ul class="itemBoxTable__bodyRow JS_multiSelector__box--selectionTitle">
             <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--toggle" style="flex-grow: 0;" data-flex="0">
               <div class="itemBoxTable__bodyCellInner">
                 <i class="itemBoxTable__action itemBoxTable__action--toggle">ऄ</i>
@@ -22,24 +22,24 @@
                 <i>Selected</i>
               </div>
             </li>
-            <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--remove js_itemBoxTable__bodyCell--removeAll" style="flex-grow: 0;" data-flex="0">
+            <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--remove JS_itemBoxTable__bodyCell--removeAll" style="flex-grow: 0;" data-flex="0">
               <div class="itemBoxTable__bodyCellInner">
-                <i class="itemBoxTable__action itemBoxTable__action--remove js_itemBoxTable__action--removeAll js_itemBoxTable__action--removeAllSelected">ޅ</i>
+                <i class="itemBoxTable__action itemBoxTable__action--remove JS_itemBoxTable__action--removeAll JS_itemBoxTable__action--removeAllSelected">ޅ</i>
               </div>
             </li>
           </ul>
 
-          <div class="itemBox itemBox--children js_multiSelector__box--selectionChildren">
+          <div class="itemBox itemBox--children JS_multiSelector__box--selectionChildren">
             <div class="itemBoxTable">
               <div class="itemBoxBody itemBoxBody--sortable ui-sortable">
-                <ul class="itemBoxTable__bodyRow js_filterableCell">
-                  <li class="itemBoxTable__bodyCell js_colorselector-trigger" style="flex-grow: 0;" data-flex="0">
-                    <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--colortoggle">
+                <ul class="itemBoxTable__bodyRow JS_filterableCell">
+                  <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 0;" data-flex="0">
+                    <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--colortoggle">
                       <i class="itemBoxTable__action itemBoxTable__action--toggle" style="color: #0bda51;" data-color="#0bda51">ग़</i>
                     </div>
                   </li>
                   <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
-                    <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--text">
+                    <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--text">
                       xamarin_tablet
                     </div>
                   </li>
@@ -60,7 +60,7 @@
           </div>
           <!-- /.itemBox -->
 
-          <ul class="itemBoxTable__bodyRow js_multiSelector__box--optionsTitle">
+          <ul class="itemBoxTable__bodyRow JS_multiSelector__box--optionsTitle">
             <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--toggle" style="flex-grow: 0;" data-flex="0">
               <div class="itemBoxTable__bodyCellInner">
                 <i class="itemBoxTable__action itemBoxTable__action--toggle">ऄ</i>
@@ -71,29 +71,29 @@
                 All
               </div>
             </li>
-            <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--remove js_itemBoxTable__bodyCell--removeAll" style="flex-grow: 0;" data-flex="0">
+            <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--remove JS_itemBoxTable__bodyCell--removeAll" style="flex-grow: 0;" data-flex="0">
               <div class="itemBoxTable__bodyCellInner">
-                <i class="itemBoxTable__action js_itemBoxTable__action--removeAll itemBoxTable__action--remove">ޅ</i>
+                <i class="itemBoxTable__action JS_itemBoxTable__action--removeAll itemBoxTable__action--remove">ޅ</i>
               </div>
             </li>
-            <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--add js_itemBoxTable__bodyCell--addAll" style="flex-grow: 0;" data-flex="0">
+            <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--add JS_itemBoxTable__bodyCell--addAll" style="flex-grow: 0;" data-flex="0">
               <div class="itemBoxTable__bodyCellInner">
-                <i class="itemBoxTable__action itemBoxTable__action--add js_itemBoxTable__action--addAll">ބ</i>
+                <i class="itemBoxTable__action itemBoxTable__action--add JS_itemBoxTable__action--addAll">ބ</i>
               </div>
             </li>
           </ul>
 
-          <div class="itemBox itemBox--children js_multiSelector__box--optionsChildren">
+          <div class="itemBox itemBox--children JS_multiSelector__box--optionsChildren">
             <div class="itemBoxTable">
               <div class="itemBoxBody">
-                <ul class="itemBoxTable__bodyRow js_filterableCell">
-                  <li class="itemBoxTable__bodyCell js_colorselector-trigger" style="flex-grow: 0;" data-flex="0">
-                    <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--colortoggle">
+                <ul class="itemBoxTable__bodyRow JS_filterableCell">
+                  <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 0;" data-flex="0">
+                    <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--colortoggle">
                       <i class="itemBoxTable__action itemBoxTable__action--toggle" style="color: #0bda51;" data-color="#0bda51">ग़</i>
                     </div>
                   </li>
                   <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
-                    <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--text">
+                    <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--text">
                       xamarin_tablet
                     </div>
                   </li>
@@ -106,14 +106,14 @@
 
                 {% include blocks/colorSelector-children.html %}
 
-                <ul class="itemBoxTable__bodyRow js_filterableCell">
-                    <li class="itemBoxTable__bodyCell js_colorselector-trigger" style="flex-grow: 0;" data-flex="0">
-                      <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--colortoggle">
+                <ul class="itemBoxTable__bodyRow JS_filterableCell">
+                    <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 0;" data-flex="0">
+                      <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--colortoggle">
                         <i class="itemBoxTable__action itemBoxTable__action--toggle" style="color: #00bfff;" data-color="#00bfff">ग़</i>
                       </div>
                     </li>
                   <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
-                    <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--text">
+                    <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--text">
                       xamarin_mobile
                     </div>
                   </li>
@@ -124,14 +124,14 @@
                   </li>
                 </ul>
                   {% include blocks/colorSelector-children.html %}
-                <ul class="itemBoxTable__bodyRow js_filterableCell">
-                    <li class="itemBoxTable__bodyCell js_colorselector-trigger" style="flex-grow: 0;" data-flex="0">
-                      <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--colortoggle">
+                <ul class="itemBoxTable__bodyRow JS_filterableCell">
+                    <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 0;" data-flex="0">
+                      <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--colortoggle">
                         <i class="itemBoxTable__action itemBoxTable__action--toggle" style="color: #f4ca16;" data-color="#f4ca16">ग़</i>
                       </div>
                     </li>
                   <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
-                    <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--text">
+                    <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--text">
                       2013_Maintenance
                     </div>
                   </li>
@@ -142,14 +142,14 @@
                   </li>
                 </ul>
                   {% include blocks/colorSelector-children.html %}
-                <ul class="itemBoxTable__bodyRow js_filterableCell">
-                    <li class="itemBoxTable__bodyCell js_colorselector-trigger" style="flex-grow: 0;" data-flex="0">
-                      <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--colortoggle">
+                <ul class="itemBoxTable__bodyRow JS_filterableCell">
+                    <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 0;" data-flex="0">
+                      <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--colortoggle">
                         <i class="itemBoxTable__action itemBoxTable__action--toggle" style="color: #e30022;" data-color="#e30022">ग़</i>
                       </div>
                     </li>
                   <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
-                    <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--text">
+                    <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--text">
                       workaround_available
                     </div>
                   </li>
