--- a/_includes/popups/multiSelector1.html
+++ b/_includes/popups/multiSelector1.html
@@ -11,12 +11,12 @@
 
   <div class="multiSelector__box">
 
-    <div class="itemBox js_multiSelector__box--optionsChildren">
+    <div class="itemBox JS_multiSelector__box--optionsChildren">
       <div class="itemBoxTable">
         <div class="itemBoxBody">
-          <ul class="itemBoxTable__bodyRow js_filterableCell">
-            <li class="itemBoxTable__bodyCell js_itemBoxTable__bodyCell--text" style="flex-grow: 1;">
-              <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--text">Not started</div>
+          <ul class="itemBoxTable__bodyRow JS_filterableCell">
+            <li class="itemBoxTable__bodyCell JS_itemBoxTable__bodyCell--text" style="flex-grow: 1;">
+              <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--text">Not started</div>
             </li>
             <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--add" style="flex-grow: 0;" data-flex="0">
               <div class="itemBoxTable__bodyCellInner">
@@ -24,9 +24,9 @@
               </div>
             </li>
           </ul>
-          <ul class="itemBoxTable__bodyRow js_filterableCell">
-            <li class="itemBoxTable__bodyCell  js_itemBoxTable__bodyCell--text" style="flex-grow: 1;">
-              <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--text">Ongoing</div>
+          <ul class="itemBoxTable__bodyRow JS_filterableCell">
+            <li class="itemBoxTable__bodyCell  JS_itemBoxTable__bodyCell--text" style="flex-grow: 1;">
+              <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--text">Ongoing</div>
             </li>
             <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--add" style="flex-grow: 0;" data-flex="0">
               <div class="itemBoxTable__bodyCellInner">
@@ -34,9 +34,9 @@
               </div>
             </li>
           </ul>
-          <ul class="itemBoxTable__bodyRow js_filterableCell">
-            <li class="itemBoxTable__bodyCell  js_itemBoxTable__bodyCell--text" style="flex-grow: 1;">
-              <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--text">Done</div>
+          <ul class="itemBoxTable__bodyRow JS_filterableCell">
+            <li class="itemBoxTable__bodyCell  JS_itemBoxTable__bodyCell--text" style="flex-grow: 1;">
+              <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--text">Done</div>
             </li>
             <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--add" style="flex-grow: 0;" data-flex="0">
               <div class="itemBoxTable__bodyCellInner">
