--- a/_includes/blocks/colorPicker-suggestions.html
+++ b/_includes/blocks/colorPicker-suggestions.html
@@ -1,14 +1,14 @@
-<div class="itemBox itemBox--children itemBox--suggestions js_itemBox--suggestions" style="display: none;">
+<div class="itemBox itemBox--children itemBox--suggestions JS_itemBox--suggestions" style="display: none;">
   <div class="itemBoxTable">
     <div class="itemBoxBody">
       <ul class="itemBoxTable__bodyRow">
-        <li class="itemBoxTable__bodyCell js_colorselector-trigger" style="flex-grow: 0;" data-flex="0">
-          <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--colortoggle">
+        <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 0;" data-flex="0">
+          <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--colortoggle">
             <i class="itemBoxTable__action itemBoxTable__action--toggle" style="color: #0bda51;" data-color="#0bda51">ग़</i>
           </div>
         </li>
         <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
-          <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--text">
+          <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--text">
             xamarin_tablet
           </div>
         </li>
@@ -20,13 +20,13 @@
       </ul>
       {% include blocks/colorSelector-children.html %}
       <ul class="itemBoxTable__bodyRow">
-        <li class="itemBoxTable__bodyCell js_colorselector-trigger" style="flex-grow: 0;" data-flex="0">
-          <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--colortoggle">
+        <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 0;" data-flex="0">
+          <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--colortoggle">
             <i class="itemBoxTable__action itemBoxTable__action--toggle" style="color: #00bfff;" data-color="#00bfff">ग़</i>
           </div>
         </li>
         <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
-          <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--text">
+          <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--text">
             xamarin_mobile
           </div>
         </li>
@@ -37,7 +37,7 @@
         </li>
       </ul>
       {% include blocks/colorSelector-children.html %}
-      <ul class="itemBoxTable__bodyRow itemBoxTable__bodyRow--loadMore js_createNewTag">
+      <ul class="itemBoxTable__bodyRow itemBoxTable__bodyRow--loadMore JS_createNewTag">
         <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
           <div class="itemBoxTable__bodyCellInner">Create New Tag</div>
         </li>
