--- a/_includes/javascript/colorSelected.html
+++ b/_includes/javascript/colorSelected.html
@@ -1,4 +1,4 @@
-<li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--add js_showSelected" style="flex-grow: 0;" data-flex="0">
+<li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--add JS_showSelected" style="flex-grow: 0;" data-flex="0">
   <div class="itemBoxTable__bodyCellInner">
     <i class="itemBoxTable__action itemBoxTable__action--add">✓</i>
   </div>
