--- a/_includes/blocks/app-nav-tab2.html
+++ b/_includes/blocks/app-nav-tab2.html
@@ -7,7 +7,7 @@
   <!-- /.multiSelector__box -->
 
   <div class="multiSelector__box">
-    <div class="itemBox js-appNavBox">
+    <div class="itemBox JS_appNavBox">
       <div class="itemBoxTable">
         <div class="itemBoxTable__body">
           <ul class="itemBoxTable__bodyRow">
