Filter: hide Selected/All blocks too if no results

--- a/_includes/popups/colorPicker-children.html
+++ b/_includes/popups/colorPicker-children.html
@@ -1,5 +1,5 @@
 <div class="multiSelector multiSelector--popup" id="multiSelector-tagpicker">
-  <div class="multiSelector__box">
+  <div class="multiSelector__box JS_multiSelector__box">
     <div class="multiSelector__search">
       <input type="search" class="multiSelector__searchInput JS_multiSelector__filterInput" placeholder="filter through tags">
     </div>
@@ -7,7 +7,7 @@
   </div>
   <!-- /.multiSelector__box -->
 
-  <div class="multiSelector__box ">
+  <div class="multiSelector__box">
     <div class="itemBox">
       <div class="itemBoxTable">
         <div class="itemBoxBody">
