--- a/_includes/popups/multiSelector-columnpicker.html
+++ b/_includes/popups/multiSelector-columnpicker.html
@@ -1,6 +1,6 @@
 <div class="multiSelector multiSelector--popup" id="multiSelector-columnpicker">
 
-  <div class="multiSelector__box">
+  <div class="multiSelector__box JS_multiSelector__box">
 
     <div class="multiSelector__search">
       <input type="search" class="multiSelector__searchInput JS_multiSelector__filterInput" placeholder="filter through items">
