--- a/_includes/popups/new-multiselect.html
+++ b/_includes/popups/new-multiselect.html
@@ -1,6 +1,6 @@
 <div class="multiSelector multiSelector--popup"  id="new-multiselect">
 
-  <div class="multiSelector__box">
+  <div class="multiSelector__box JS_multiSelector__box">
 
     <div class="multiSelector__search">
       <input type="search" class="multiSelector__searchInput" placeholder="filter through columns">
