--- a/_includes/popups/multiSelector1.html
+++ b/_includes/popups/multiSelector1.html
@@ -1,6 +1,6 @@
 <div class="multiSelector multiSelector--popup" id="multiSelector-1">
 
-  <div class="multiSelector__box">
+  <div class="multiSelector__box JS_multiSelector__boxx">
 
     <div class="multiSelector__search">
       <input type="search" class="multiSelector__searchInput JS_multiSelector__filterInput" placeholder="filter through items">
