--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -31,8 +31,8 @@
   <!-- new multiselect -->
   <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/newMultiselect.js"></script>
   <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/newMultiselectPopup.js"></script>
-  <!-- new simpleselect -->
-  <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/newSimpleSelect.js"></script>
+  <!-- new SingleSelect -->
+  <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/newSingleSelect.js"></script>
   <!-- colorpicker -->
   <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/colorselector.js"></script>
 
@@ -91,8 +91,8 @@
   <!-- new multiselect -->
   <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/newMultiselect.js"></script>
   <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/newMultiselectPopup.js"></script>
-  <!-- new simpleselect -->
-  <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/newSimpleSelect.js"></script>
+  <!-- new SingleSelect -->
+  <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/newSingleSelect.js"></script>
 
   <!-- filters -->
   <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/filter.js"></script>
